This is a change to the handling of shadows, to fix an issue that could occur with z-index in ie.
git-svn-id: https://studio.atlassian.com/svn/AJS/trunk@108395 2c54a935-e501-0410-bc05-97a93f6bca70

--- a/auiplugin/src/main/resources/css/atlassian/dropdown.css
+++ b/auiplugin/src/main/resources/css/atlassian/dropdown.css
@@ -84,12 +84,8 @@
     right:0px;
 }
 
-.aui-dd-parent .aui-shadow-parent {
-    background: transparent;
-    border: none;
-    margin: 0;
-    padding: 0;
-    right: 7px;
+.aui-dd-parent .aui-shadow {
+    right: 5px;
 }
 .aui-dd-parent .aui-dropdown li.dropdown-item,
 .aui-dropdown li.dropdown-item  {
